--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/react": "^2.2.1",
     "bootstrap": "^5.2.3",
     "gatsby": "^5.3.3",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-image": "^3.3.2",
     "gatsby-plugin-mdx": "^5.3.1",
     "gatsby-plugin-sharp": "^5.3.2",
